--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <input type="text" class="search__input" placeholder="Search hotels">
                 <button class="search__button">
                     <svg class="search__icon">
-                        <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
+                        <use xlink:href="img/sprite.svg#icon-magnifying-glass"/>
                     </svg>
                 </button>
             </form>
@@ -29,7 +29,7 @@
             <nav class="user-nav">
                 <div class="user-nav__icon-box">
                     <svg class="user-nav__icon">
-                        <use xlink:href="img/sprite.svg#icon-bookmark"></use>
+                        <use xlink:href="img/sprite.svg#icon-bookmark"/>
                     </svg>
                     <span class="user-nav__notification">
                         7
@@ -37,7 +37,7 @@
                 </div>
                 <div class="user-nav__icon-box">
                     <svg class="user-nav__icon">
-                        <use xlink:href="img/sprite.svg#icon-chat"></use>
+                        <use xlink:href="img/sprite.svg#icon-chat"/>
                     </svg>
                     <span class="user-nav__notification">
                         13
@@ -53,7 +53,43 @@
         </header>
         <div class="content">
             <nav class="sidebar">
-                Navigation
+                <ul class="side-nav">
+                    <li class="side-nav__item active">
+                        <a href="#" class="side-nav__link">
+                            <svg class="side-nav__icon">
+                                <use xlink:href="img/sprite.svg#icon-home"/>
+                            </svg>
+                            <span>Hotel</span>
+                        </a>
+                    </li>
+                    <li class="side-nav__item">
+                        <a href="#" class="side-nav__link">
+                            <svg class="side-nav__icon">
+                                <use xlink:href="img/sprite.svg#icon-aircraft-take-off"/>
+                            </svg>
+                            <span>Flight</span>
+                        </a>
+                    </li>
+                    <li class="side-nav__item">
+                        <a href="#" class="side-nav__link">
+                            <svg class="side-nav__icon">
+                                <use xlink:href="img/sprite.svg#icon-key"/>
+                            </svg>
+                            <span>Car rental</span>
+                        </a>
+                    </li>
+                    <li class="side-nav__item">
+                        <a href="#" class="side-nav__link">
+                            <svg class="side-nav__icon">
+                                <use xlink:href="img/sprite.svg#icon-map"/>
+                            </svg>
+                            <span>Tours</span>
+                        </a>
+                    </li>
+                </ul>
+                <div class="legal">
+                    &copy; 2017 by Trillo. All right reserved
+                </div>
             </nav>
             <main class="hotel-view">
                 Hotel view
