--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <input type="text" class="search__input" placeholder="Search hotels">
                 <button class="search__button">
                     <svg class="search__icon">
-                        <use xlink:href="img/sprite.svg#icon-magnifying-glass"/>
+                        <use xlink:href="img/sprite.svg#icon-magnifying-glass" />
                     </svg>
                 </button>
             </form>
@@ -29,7 +29,7 @@
             <nav class="user-nav">
                 <div class="user-nav__icon-box">
                     <svg class="user-nav__icon">
-                        <use xlink:href="img/sprite.svg#icon-bookmark"/>
+                        <use xlink:href="img/sprite.svg#icon-bookmark" />
                     </svg>
                     <span class="user-nav__notification">
                         7
@@ -37,7 +37,7 @@
                 </div>
                 <div class="user-nav__icon-box">
                     <svg class="user-nav__icon">
-                        <use xlink:href="img/sprite.svg#icon-chat"/>
+                        <use xlink:href="img/sprite.svg#icon-chat" />
                     </svg>
                     <span class="user-nav__notification">
                         13
@@ -57,7 +57,7 @@
                     <li class="side-nav__item active">
                         <a href="#" class="side-nav__link">
                             <svg class="side-nav__icon">
-                                <use xlink:href="img/sprite.svg#icon-home"/>
+                                <use xlink:href="img/sprite.svg#icon-home" />
                             </svg>
                             <span>Hotel</span>
                         </a>
@@ -65,7 +65,7 @@
                     <li class="side-nav__item">
                         <a href="#" class="side-nav__link">
                             <svg class="side-nav__icon">
-                                <use xlink:href="img/sprite.svg#icon-aircraft-take-off"/>
+                                <use xlink:href="img/sprite.svg#icon-aircraft-take-off" />
                             </svg>
                             <span>Flight</span>
                         </a>
@@ -73,7 +73,7 @@
                     <li class="side-nav__item">
                         <a href="#" class="side-nav__link">
                             <svg class="side-nav__icon">
-                                <use xlink:href="img/sprite.svg#icon-key"/>
+                                <use xlink:href="img/sprite.svg#icon-key" />
                             </svg>
                             <span>Car rental</span>
                         </a>
@@ -81,7 +81,7 @@
                     <li class="side-nav__item">
                         <a href="#" class="side-nav__link">
                             <svg class="side-nav__icon">
-                                <use xlink:href="img/sprite.svg#icon-map"/>
+                                <use xlink:href="img/sprite.svg#icon-map" />
                             </svg>
                             <span>Tours</span>
                         </a>
@@ -92,7 +92,61 @@
                 </div>
             </nav>
             <main class="hotel-view">
-                Hotel view
+                <div class="gallery">
+                    <figure class="gallery__item">
+                        <img src="img/hotel-1.jpg" alt="Photo of hotel 1" class="gallery__photo">
+                    </figure>
+                    <figure class="gallery__item">
+                        <img src="img/hotel-2.jpg" alt="Photo of hotel 2" class="gallery__photo">
+                    </figure>
+                    <figure class="gallery__item">
+                        <img src="img/hotel-3.jpg" alt="Photo of hotel 3" class="gallery__photo">
+                    </figure>
+                </div>
+
+                <div class="overview">
+                    <h1 class="overview__heading">
+                        Hotel Las Palmas
+                    </h1>
+                    <div class="overview__stars">
+                        <svg class="overview__icon-star">
+                            <use xlink:href="img/sprite.svg#icon-star" />
+                        </svg>
+                        <svg class="overview__icon-star">
+                            <use xlink:href="img/sprite.svg#icon-star" />
+                        </svg>
+                        <svg class="overview__icon-star">
+                            <use xlink:href="img/sprite.svg#icon-star" />
+                        </svg>
+                        <svg class="overview__icon-star">
+                            <use xlink:href="img/sprite.svg#icon-star" />
+                        </svg>
+                        <svg class="overview__icon-star">
+                            <use xlink:href="img/sprite.svg#icon-star" />
+                        </svg>
+                    </div>
+
+                    <div class="overview__location">
+                        <svg class="overview__icon-location">
+                            <use xlink:href="img/sprite.svg#icon-location-pin" />
+                        </svg>
+
+                        <button class="btn-inline">
+                            Albufeira, Portugal
+                        </button>
+                    </div>
+
+                    <div class="overview__rating">
+                        <div class="overview__rating-average">
+                            8.6
+                        </div>
+                        <div class="overview__rating-count">
+                            429 votes
+                        </div>
+                    </div>
+
+                </div>
+
             </main>
         </div>
     </div>
