hotel click to action

--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
 
                         <figure class="review">
                             <blockquote class="review__text">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta animi.
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto
+                                dicta animi.
                             </blockquote>
                             <figcaption class="review__user">
                                 <img src="img/user-2.jpg" alt="User 2" class="review__photo">
@@ -241,6 +242,19 @@
                             Show all <span>&rarr;</span>
                         </button>
                     </div>
+
+
+                </div>
+                <div class="cta">
+                    <h2 class="cta__book-now">
+                        Good news! We have 4 available rooms for your selected dates!
+                    </h2>
+                    <button class="btn">
+                        <span class="btn__visible">Book Now</span>
+                        <span class="btn__invisible">
+                            Only 4 rooms left
+                        </span>
+                    </button>
                 </div>
 
             </main>
