add user dropdown

--- a/index.html
+++ b/index.html
@@ -46,8 +46,34 @@
                 <div class="user-nav__user">
                     <img src="img/user.jpg" alt="User photo" class="user-nav__user-photo">
                     <span class="user-nav__user-name">
-                        Jonas
+                        Jonas S.
                     </span>
+                    <ul class="user-nav__user-dropdown">
+                        <li class="user-nav__dropdown-list">
+                            <svg class="user-nav__dropdown-icon">
+                                <use xlink:href="img/sprite.svg#icon-user" />
+                            </svg>
+                            <span>Profile</span>
+                        </li>
+                        <li class="user-nav__dropdown-list">
+                            <svg class="user-nav__dropdown-icon">
+                                <use xlink:href="img/sprite.svg#icon-rocket" />
+                            </svg>
+                            <span>Activities</span>
+                        </li>
+                        <li class="user-nav__dropdown-list">
+                            <svg class="user-nav__dropdown-icon">
+                                <use xlink:href="img/sprite.svg#icon-cog" />
+                            </svg>
+                            <span>Setting</span>
+                        </li>
+                        <li class="user-nav__dropdown-list">
+                            <svg class="user-nav__dropdown-icon">
+                                <use xlink:href="img/sprite.svg#icon-log-out" />
+                            </svg>
+                            <span>Logout</span>
+                        </li>
+                    </ul>
                 </div>
             </nav>
         </header>
